--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     </style>
 </head>
 <body>
+<a href="2.html">2222</a>
 <div class="container">
     <h1>全局CSS样式——栅格布局系统</h1>
     <h3>一行中只有一列</h3>
     <div class="row">
-        <div class="col-md-1">MD-1
-            <a href="2.html">2222</a>
-        </div>
+        <div class="col-md-1">MD-1</div>
     </div>
     <div class="row">
         <div class="col-md-2">MD-2</div>
