--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 
 <head>
     <meta charset="utf-8">
-    <title>element-starter</title>
+    <title>魔法前端</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
+
 
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="manifest.js?7df4b4e10654399caf30"></script><script type="text/javascript" src="vendor.js?89c3f137f6347db91ea3"></script><script type="text/javascript" src="index.js?c9a73c0ab8adbe098a0b"></script></body>
-
+<script type="text/javascript" src="manifest.js?409e69cc84ba0b1617e1"></script><script type="text/javascript" src="vendor.js?d05e74a7811a9680ba5b"></script><script type="text/javascript" src="index.js?0af9d3324c2774dc4186"></script></body>
+<script>
+    console.log('欢迎来到我的博客。')
+    console.log('我的技术专长：')
+    console.log('VUE,Angular,React,Ionic,H5,Less,原生JS,DOM,BOM,Jquery，Bootstrap,WebApp,HybridApp,混合开发，,Zepto,Node,Git,Webpack,小程序（了解php,sql,）：')
+    console.log('我的邮箱：airmusic#msn.com')
+</script>
 </html>
