--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="manifest.js?b362d0cb88631818827c"></script><script type="text/javascript" src="vendor.js?d05e74a7811a9680ba5b"></script><script type="text/javascript" src="index.js?6ec895111fa01151c2ba"></script></body>
+<script type="text/javascript" src="manifest.js?4ff3d8c2457a80db5bf8"></script><script type="text/javascript" src="vendor.js?e85ddd1579adcdd6afe8"></script><script type="text/javascript" src="index.js?2dffbc62a0be348f355d"></script></body>
 <script>
     console.log('欢迎来到我的博客。')
     console.log('我的技术专长：')
     console.log('VUE,Angular,React,Ionic,H5,Less,原生JS,DOM,BOM,Jquery，Bootstrap,WebApp,HybridApp,混合开发，,Zepto,Node,Git,Webpack,小程序（了解php,sql,）：')
     console.log('我的邮箱：airmusic#msn.com')
+    console.log('我的GITHUB：https://github.com/WangShuXian6')
 </script>
 </html>
