remove manifest.js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="manifest.js?4ff3d8c2457a80db5bf8"></script><script type="text/javascript" src="vendor.js?e85ddd1579adcdd6afe8"></script><script type="text/javascript" src="index.js?2dffbc62a0be348f355d"></script></body>
+<script type="text/javascript" src="vendor.js?27675959f8c52e51d8cd"></script><script type="text/javascript" src="index.js?2dffbc62a0be348f355d"></script></body>
 <script>
     console.log('欢迎来到我的博客。')
     console.log('我的技术专长：')
